Fix desktop nav link spacing.

--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -456,7 +456,7 @@ footer {
   .navbar__desktop-menu {
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     width: 90%;
     line-height: 2;
     font-size: 1.3rem;
@@ -475,7 +475,7 @@ footer {
   }
 
   .navbar__desktop-menu a {
-    padding: 0 2rem;
+    padding: 0 1rem;
     letter-spacing: 1px;
   }
 
